<resources>
    <string name="app_name">Coop Companion</string>
    <string name="name">Name: </string>
    <string name="people_assigned">People Assigned </string>
    <string name="due_date">Due Date: </string>
    <string name="status">Status: </string>
    <string name="repeat_weekly">Repeat Weekly: </string>
    <string name="collection">Collection: </string>
    <string name="description">Description: </string>
    <string name="add_people">Add People</string>
    <string name="add_due_date">Add Due Date</string>
    <string name="tasks">Tasks</string>
    <string name="resources">Resources</string>
    <string name="add_task">Add Task</string>
    <string name="add_resource">Add Resource</string>
    <string name="submit">Submit</string>
    <string name="title_activity_authentication">Authentication</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_log_in">LogInActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="status_collection_depleted">Collection Status: DEPLETED</string>
    <string name="status_collection_available">Collection Status: AVAILABLE</string>
    <string name="status_item_empty">Item Status: EMPTY</string>
    <string name="status_item_available">Item Status: AVAILABLE</string>
    <string name="status_empty">EMPTY</string>
    <string name="status_depleted">DEPLETED</string>
    <string name="status_available">AVAILABLE</string>
    <string name="change_status_item">Change Status Item</string>
    <string name="change_status_collection">Change Status Collection</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_tasks">Tasks</string>
    <string name="nav_resources">Resources</string>
    <string name="nav_settings">Settings</string>

    <!-- Login Strings -->
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="error_incorrect_email_or_password">The password or email is incorrect</string>
    <string name="error_password_too_short">This password is too short (less than 6 characters)</string>
    <string name="error_intro">"Error: \n"</string>
    <string name="error_blank_email">Please enter an email address</string>
    <string name="error_blank_password">Please enter a password</string>
    <string name="error_blank_first_name">First name cannot be blank</string>
    <string name="error_blank_last_name">Last name cannot be blank</string>
    <string name="error_blank_group_name">Group name cannot be blank</string>
    <string name="error_mismatched_passwords">The passwords do not match</string>
    <string name="error_join">"\n"</string>

</resources>
