<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        card_view:cardCornerRadius="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/task_or_resource_done"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/string_name"
                android:text="@string/name"
                android:layout_toRightOf="@id/task_or_resource_done"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/string_name"
                android:id="@+id/upcoming_name"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/upcoming_name"
                android:layout_toRightOf="@id/task_or_resource_done"
                android:id="@+id/people_assigned"
                android:text="@string/people_assigned"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/upcoming_name"
                android:layout_toRightOf="@id/people_assigned"
                android:id="@+id/upcoming_people"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/upcoming_people"
                android:layout_toRightOf="@id/task_or_resource_done"
                android:id="@+id/due_date"
                android:text="@string/due_date"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/upcoming_people"
                android:layout_toRightOf="@id/due_date"
                android:id="@+id/upcoming_due_date"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/upcoming_people"
                android:layout_toRightOf="@id/task_or_resource_done"
                android:id="@+id/status"
                android:text="@string/status"
                android:visibility="invisible"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/upcoming_people"
                android:layout_toRightOf="@id/status"
                android:id="@+id/upcoming_status"
                android:visibility="invisible"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>